Adjust build for Java 9 (b181).